add on-demand ledger verification
